# PandemicCircles

./: CMakeLists.txt  README.md  pandemic_circles.cc
examples/: example_ lat=51.05871_lon=13.77054_r=15.gpx  example_lat=50.56670_lon=12.99632 r=15.gpx
